<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/background_white"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ListView
            android:id="@+id/dl_xzgd_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:dividerHeight="1px"
            android:divider="@color/divider_color2" />
        <TextView
            android:id="@+id/message_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            style="@style/large_textSize"
            android:textColor="@color/color_999999"
            android:text="@string/down_message_tv"
            android:visibility="invisible"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dl_xzgd_qx"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/all_click_bt"
            style="@style/large_textSize"
            android:textColor="@color/color_999999"
            android:gravity="center"/>
        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/divider_color"/>
        <TextView
            android:id="@+id/dl_xzgd_qd"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/suredown_bt"
            style="@style/large_textSize"
            android:textColor="@color/color_999999"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>