<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:background="@color/background_white"
      android:layout_height="match_parent">
   <!-- <com.example.view.ListViewCompat
        android:id="@+id/dl_xxxw_lv"
        android:layout_width="match_parent"
        android:divider="#00000000"
        android:layout_weight="1"
        android:layout_height="wrap_content">

    </com.example.view.ListViewCompat>-->
    <com.example.view.ListViewCompat
        android:id="@+id/dl_xxxw_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff4f7f9"
        android:cacheColorHint="#00000000"
        android:divider="#dddbdb"
        android:dividerHeight="1.0px"
        android:drawSelectorOnTop="false"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/divider_color"/>

    <TextView
        android:id="@+id/dl_xxxw_xzgd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/down_more"
        android:textColor="@color/color_999999"
        style="@style/large_textSize" />

    <LinearLayout
        android:id="@+id/dl_xxxw_ll_bj"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dl_xxxw_qx"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/all_click_bt"
            style="@style/large_textSize"
            android:textColor="@color/color_999999"
            android:gravity="center"/>
        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/divider_color"/>
        <TextView
            android:id="@+id/dl_xxxw_del"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/down_delete"
            style="@style/large_textSize"
            android:textColor="@color/color_999999"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>