<?xml version="1.0" encoding="utf-8"?>
<!--  登录页面     -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
  
    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    	android:background="@color/color_white">
    	
        <FrameLayout
	        android:id="@+id/r1"
	        android:layout_width="match_parent"
	        android:layout_height="120dp">

			<ImageView
				android:id="@+id/image"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:scaleType="fitCenter"
				android:background="@drawable/bg_login1"/>
		  	<TextView
				android:id="@+id/tv"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="@color/color_white"
				android:layout_marginTop="-20dp"
				android:layout_gravity="center"
				android:gravity="center"
				style="@style/extra_large_textSize" />
    	</FrameLayout>
		<ScrollView
		    android:id="@+id/r2"
		    android:layout_below="@id/r1"
        	android:layout_width="match_parent"
        	android:layout_height="200dp">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:layout_gravity="bottom"
				android:focusable="true"
				android:focusableInTouchMode="true">

           		<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/login_editbox"
					android:layout_marginLeft="20dp"
					android:layout_marginRight="20dp"
					android:layout_marginBottom="10dp"
					android:paddingTop="20dp"
					android:paddingBottom="20dp"
					android:orientation="vertical">
        		
           	   	<RelativeLayout
			    	android:layout_width="match_parent"
	        		android:layout_height="wrap_content"
	        		android:paddingLeft="10dp"
	        		android:paddingRight="10dp">

					<TextView
						android:id="@+id/icon_user"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						style="@style/large_textSize"
						android:text="@string/icon_user"
						android:textColor="@color/colorPrimary"/>

	        		<EditText
			            android:id="@+id/login_user_edit"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            style="@style/middle_textSize"
			            android:layout_marginLeft="15dp"
			            android:layout_toRightOf="@+id/icon_user"
			            android:layout_centerVertical="true"
			            android:background="@null"
			            android:hint="@string/login_ac_h1"
			            android:singleLine="true"
						android:textColorHint ="@color/color_e4e4e4"
			            android:textColor="@color/color_333333" />
        		</RelativeLayout>
        		
           	   	<View
        		    android:id="@+id/cut_off_line"
        		    android:layout_below="@+id/login_user_edit"
        		    android:layout_width="match_parent"
        		    android:layout_height="0.01dp"
        		    android:layout_marginTop="10dp"
		            android:layout_marginBottom="10dp"
        		    android:background="@color/divider_color"/>
           	   	
        		<RelativeLayout
			    	android:layout_width="match_parent"
	        		android:layout_height="wrap_content"
	        		android:paddingLeft="10dp"
	        		android:paddingRight="10dp">

					<TextView
						android:id="@+id/icon_lock"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						style="@style/large_textSize"
						android:text="@string/icon_lock"
						android:textColor="@color/colorPrimary"/>
			        <EditText
			            android:id="@+id/login_passwd_edit"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
						style="@style/middle_textSize"
			            android:layout_toRightOf="@+id/icon_lock"
			            android:layout_centerVertical="true"
			            android:layout_marginLeft="15dp"
			            android:background="@null"
			            android:hint="@string/login_ac_h2"
			            android:password="true"
			            android:singleLine="true"
						android:textColorHint ="@color/color_e4e4e4"
						android:textColor="@color/color_333333"
						android:imeOptions="actionDone"/>
        		</RelativeLayout>


        	</LinearLayout>
				<RelativeLayout
				android:id="@+id/checkbox_group"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp">

				<com.example.view.smoothCheckBox.SmoothCheckBox
					android:id="@+id/checkBox"
					android:layout_width="20dp"
					android:layout_height="20dp"
					android:layout_centerVertical="true"
					app:color_checked="@color/colorPrimary"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="5dp"
					android:layout_toRightOf="@+id/checkBox"
					android:layout_centerVertical="true"
					android:text="@string/login_ac_cb"
					android:textColor="@color/color_333333"
					style="@style/middle_textSize"/>
			</RelativeLayout>
			</LinearLayout>
		</ScrollView>
		
		<RelativeLayout
		    android:id="@+id/r3"
		    android:layout_below="@id/r2"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:paddingLeft="20dp"
        	android:paddingRight="20dp">
           	

		    <Button
	            android:id="@+id/login_login_btn"
	            android:layout_width="match_parent"
	            android:layout_height="50dp"
	            android:layout_marginTop="10dp"
	    		android:background="@drawable/shape" 
	            android:onClick="login"
	            android:text="@string/login_ac_bt"
	            style="@style/large_textSize"
	            android:textColor="@color/color_white" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="30dp"
                >
				<com.example.view.smoothCheckBox.SmoothCheckBox
					android:id="@+id/ischeckBox"
					android:layout_width="20dp"
					android:layout_height="20dp"
					android:layout_centerVertical="true"
					app:color_checked="@color/colorPrimary"/>
                <TextView
					android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="登录即代表阅读并同意"/>
                <TextView
                    android:id="@+id/fuwu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="服务条款"
                    android:clickable="true"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
		    <TextView 
		        android:id="@+id/error_tv"
		        android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:layout_below="@+id/login_login_btn"
	       		android:layout_marginTop="10dp"
	       		android:layout_centerHorizontal="true"
	       		android:textColor="@color/error"
				style="@style/middle_textSize"/>
        </RelativeLayout>

	</RelativeLayout>

	<include
    	android:id="@+id/captchalib"
        layout="@layout/layout_captchalib"
        android:visibility="invisible"
        android:layout_width="match_parent"
 	    android:layout_height="match_parent"/>
	
</RelativeLayout>