<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white">

    <RelativeLayout
        android:id="@+id/size_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="剩余容量 :"
            android:textColor="@color/color_333333"
            style="@style/middle_textSize"/>
        <ProgressBar
            android:id="@+id/size_pb"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/t1"
            android:layout_toLeftOf="@+id/size_tv"
            android:layout_centerVertical="true"
            android:maxHeight="48dp"
            android:minHeight="48dp"
            android:max="100"
            android:progress="40"
            android:progressDrawable="@drawable/drawable_progress"
            android:visibility="visible" />
        <TextView
            android:id="@+id/size_tv"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30M/20g"
            android:textColor="@color/color_999999"
            style="@style/middle_textSize"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/line"
        android:layout_below="@+id/size_layout"
        android:layout_width="match_parent"
        android:layout_height="0.01dp"
        android:background="@color/divider_color"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@+id/line"
        android:layout_above="@+id/bottom_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:id="@+id/bottom_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView
            android:id="@+id/select_all_bt"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/all_click_bt"
            style="@style/large_textSize"
            android:textColor="@color/color_999999"
            android:gravity="center"/>
        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/divider_color"/>
        <TextView
            android:id="@+id/detele_bt"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/down_delete"
            style="@style/large_textSize"
            android:textColor="@color/color_999999"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:background="@drawable/shadow_133248"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/start_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/icon_start_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_file_down"
                style="@style/large_textSize"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="全部开始"
                style="@style/large_textSize"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/stop_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/icon_stop_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_stop"
                style="@style/large_textSize"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="全部停止"
                style="@style/large_textSize"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/icon_delete_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_delete"
                style="@style/large_textSize"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="全部删除"
                style="@style/large_textSize"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>