<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#ffffff"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
 <!--       <Spinner
            android:id="@+id/search_selecttype"
            android:layout_width="70dp"
            android:layout_height="match_parent">

        </Spinner>-->
        <TextView
            android:id="@+id/search_retrun"
            style="@style/large_textSize"
            android:onClick="click"
            android:text="@string/icon_back"
            android:textColor="@color/color_white"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="44dp"
            android:gravity="center"
            android:minHeight="44dp"
            />
        <RelativeLayout
            android:layout_toRightOf="@+id/search_retrun"
            android:layout_toLeftOf="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_edittext"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/search_icon_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/large_textSize"
                android:text="@string/icon_search"
                android:onClick="click"
                android:clickable="true"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:id="@+id/search_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/middle_textSize"
                android:layout_toRightOf="@+id/search_icon_lock"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_edittext"
                android:gravity="center_vertical"
                android:hint="@string/search_content"
                android:textColorHint ="@color/text_gray"
                android:textColor="@color/text_5b5b5b"
                android:imeOptions="actionDone"/>
            <TextView
                android:id="@+id/search_icon_close"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                style="@style/large_textSize"
                android:text="@string/icon_close"
                android:visibility="gone"
                android:gravity="center"
                android:onClick="click"
                android:clickable="true"
                android:textColor="@color/text_5b5b5b"/>
        </RelativeLayout>
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_toRightOf="@+id/search_retrun"-->
            <!--android:layout_toLeftOf="@+id/search_btn"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:layout_height="1sp"-->
            <!--android:background="#ffffff"-->
            <!--android:layout_alignParentBottom="true"/>-->
        <Button
            android:id="@+id/search_btn"
            android:layout_alignParentRight="true"
            android:text="搜索"
            android:onClick="click"
            android:gravity="center"
            android:background="@null"
            android:textColor="#ffffff"
            android:layout_width="50dp"
            android:layout_height="match_parent"/>
    </RelativeLayout>
    <LinearLayout
        android:visibility="visible"
        android:id="@+id/search_type"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="50dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/text_5b5b5b"
            android:textSize="13sp"
            android:text="搜索指定内容"/>
        <LinearLayout
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/search_type_ml"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="click"
                android:textColor="@color/arc_finished_color"
                android:textSize="13sp"
                android:text="目录"/>
            <TextView
                android:id="@+id/search_type_wd"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="click"
                android:gravity="center"
                android:textColor="@color/arc_finished_color"
                android:textSize="13sp"
                android:text="问答"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:visibility="gone"
        android:id="@+id/search_list"
        android:divider="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</LinearLayout>